[package]
name = "single_thread_tasker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
mini-redis = "0.4"
sqlite = "0.31"
time = "0.3"
chrono = "0.4"
